# GTS

./: .gitignore  DDP_test.py  README.en.md  README.md  REAMD.md  SSIM.py  VoxelSlicesPlotter.m  data_utils.py  dataset.py  gaussian.py  gaussian2vol.py  initialize_points.m  model.py  model2.py  model_old.py  pyproject.toml  readme.txt  render.py  render_LCT.py  render_LCT2.py  render_confocal.py  render_confocal_LCT_data.py  render_mat.m  render_mat.py  render_nonconfocal.py  render_ply.py  result.ply  scene.py  show.m  train.py  train_DDP.py  train_LCT_data.py  train_LCT_data2.py  train_LCT_data_random.py  train_LCT_data_random2.py  train_confocal.py  train_confocal2.py  train_confocal_DDP.py  train_confocal_hard.py  train_harder_scene.py  (+12 more)
code_test/: SSIM.py  forward_render1.py  obj2voxel.py  threedshow.m
src/: dataset.py  render_LCT.py  scene.py  scene2.py  train_confocal.py  train_confocal_DDP.py  train_multi_view.py  train_multi_view_DDP.py  train_multi_view_volume_DDP.py  train_multi_view_volume_rendering.py  train_phf.py  train_phf_single.py  train_random_scan.py  train_random_scan_DDP.py  voxel_show.py
whl/: diff_gaussian_rasterization-0.0.0-cp310-cp310-linux_x86_64.whl
yrl_cow_data/: cow_points.mat  cow_points_fk.mat  teapot.mat  teapot_points.mat
