[project]
name = "GTS"
version = "1.0.0"
description = "Gaussian Transient Splatting for NLOS Imaging"
requires-python = ">=3.11,<3.13"  # Python 3.13 not yet supported for some deps
dependencies = [
    "torch",
    "pytorch3d",
    "imageio",
    "matplotlib",
    "numpy",
    "PyMCubes",
    "opencv-python",
    "tqdm",
    "scipy",
    "plotly",
    "plyfile",
    "fvcore",
    "iopath"
]

[tool.uv]
package = true
cache-dir = "/data/hw5/.uv_cache"

[[tool.uv.index]]
url = "https://mirrors.aliyun.com/pypi/simple" # "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true
